src/main/kotlin/com/example/planificador/error/exception/TipoNotFoundException.kt
package com.example.planificador.error.exception

class TipoNotFoundException(message: String) : Exception("Not Found Exception (404). $message") {
}